Modified the style.css, script.js and index.html files to enable the color coding for the cards, and to make work the draggable and droppable functions.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,11 +14,11 @@ body {
 .task-card:hover {
   cursor: grab;
 }
-
+/* 
 .card {
   width: 100%;
   min-height: 40px; 
   max-height: 60px;
   color: blueviolet;
   cursor: pointer;
-}
+} */
